增加源码 一台机器 三个节点 搭建